--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -205,7 +205,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr max-content;
     grid-gap: 1rem 1rem;
-    margin: 0 1rem 0 1rem;
+    margin: 0 1rem 8rem 1rem;
   /*
     
     @media only screen  and (max-width: 992px){
@@ -411,7 +411,7 @@
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr auto;
     grid-gap: 1rem 1rem;
-    margin: 0 1rem 0 1rem;
+    margin: 0 1rem 8rem 1rem;
 
 
        /*Arrival Title*/
@@ -610,7 +610,91 @@
     background-color: grey;
     height: 300px;
     grid-column: 1 / -1;
+    padding: 4rem 10rem 4rem 10rem;
+    background-color: $white;
 
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    
+    &-logo {
+
+        &__img {
+            padding : 0 0 2rem 0;
+        }
+
+        &__text {
+            opacity: 0.5;
+            font-family: $font-primary;
+            font-size: 14px;
+            font-weight: normal;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: 1.43;
+            letter-spacing: normal;
+            color: $dark-slate-blue;
+        }
+    }
+
+    &-pro {
+
+        &__title {
+            @include title;
+        }
+
+        &__list {
+
+            &__item {
+                list-style: none;
+                padding: 1rem 0;
+
+                a {
+                    @include list;
+                }
+            }
+        }
+
+    }
+
+    &-about {
+
+        &__title {
+            @include title;
+        }
+
+        &__list {
+
+            &__item {
+                list-style: none;
+                padding: 1rem 0;
+
+                a {
+                    @include list;
+                }
+            }
+        }
+
+    }
+
+    &-support {
+
+        &__title {
+            @include title;
+        }
+
+        &__list {
+
+            &__item {
+                list-style: none;
+                padding: 1rem 0;
+
+                a {
+                    @include list;
+                }
+            }
+        }
+
+    }
 }
 
 
