--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,34 @@
+/*
+Mixins
+*/
+@mixin list {
+    text-decoration: none;
+    opacity: 0.5;
+    font-family: $font-primary;
+    font-size: 14px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.43;
+    letter-spacing: normal;
+    color: $dark-slate-blue;
+}
 
+@mixin title {
+    font-family: $font-primary;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.5;
+    letter-spacing: normal;
+    color: $dark-slate-blue;
+    padding: 0 0 2rem 0;
+}
+
+/*
+Variables
+*/
 $white: #ffffff;
 $black: #000000;
 $cloudy-blue: #ced7e0;
