--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,133 @@
 /*
+0-600px     : Phone
+
+600-900px   : Tablet portrait
+
+900-1200px  : Tablet landscape
+
+(1200-1800) :   is where our normal style applied
+
+1800+       : Big desktop
+
+
+--- $breakpoint argument choise
+
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+
+1em = 16px
+
+*/
+/*
 Mixins
 */
 /*
 Variables
 */
+.navigation {
+  display: none;
+  /* Deactive and active toogle menu*/ }
+  @media (max-width: 37.5em) {
+    .navigation {
+      display: block; } }
+  .navigation__checkbox {
+    display: none; }
+  .navigation__button {
+    background-color: #fff;
+    height: 7rem;
+    width: 7rem;
+    position: fixed;
+    top: 6rem;
+    right: 6rem;
+    border-radius: 50%;
+    z-index: 2000;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.4);
+    text-align: center;
+    cursor: pointer; }
+  .navigation__background {
+    height: 6rem;
+    width: 6rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 6.5rem;
+    right: 6.5rem;
+    background-image: radial-gradient(#264380, #1a3163);
+    z-index: 1000;
+    transition: transform 0.8s cubic-bezier(0.86, 0, 0.07, 1); }
+  .navigation__nav {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1500;
+    opacity: 0;
+    width: 0;
+    transition: all 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+  .navigation__list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    list-style: none;
+    text-align: center; }
+  .navigation__item {
+    margin: 1rem; }
+  .navigation__link:link, .navigation__link:visited {
+    display: inline-block;
+    font-size: 3rem;
+    font-weight: 300;
+    color: #fff;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
+    background-size: 225%;
+    transition: all .4s;
+    backface-visibility: hidden; }
+  .navigation__link:hover, .navigation__link:active {
+    background-position: 100%;
+    color: black;
+    transform: translateX(1rem); }
+  .navigation__checkbox:checked ~ .navigation__background {
+    transform: scale(75); }
+  .navigation__checkbox:checked ~ .navigation__nav {
+    opacity: 1;
+    width: 100%; }
+  .navigation__icon {
+    position: relative;
+    margin-top: 3.5rem; }
+    .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+      width: 3rem;
+      height: 2px;
+      background-color: #333;
+      display: inline-block;
+      transition: all .2s; }
+    .navigation__icon::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: -.8rem; }
+    .navigation__icon::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: .8rem; }
+  .navigation__button:hover .navigation__icon::before {
+    top: -1rem; }
+  .navigation__button:hover .navigation__icon::after {
+    top: 1rem; }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon {
+    background-color: transparent; }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon::before {
+    top: 0;
+    transform: rotate(135deg); }
+  .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+    top: 0;
+    transform: rotate(-135deg); }
+
 *,
 *::before,
 *::after {
@@ -14,6 +138,18 @@ Variables
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 37.5%; } }
 
 body {
   font-family: Lato, sans-serif;
@@ -54,8 +190,8 @@ body {
 .dot {
   display: inline-block;
   content: ' ';
-  width: 6px;
-  height: 6px;
+  width: 0.6rem;
+  height: 0.6rem;
   background-color: #ced7e0;
   border-radius: 50%;
   margin: 0.5rem;
@@ -65,8 +201,8 @@ body {
 .dot-sm {
   display: inline-block;
   content: '';
-  width: 4px;
-  height: 4px;
+  width: 0.4rem;
+  height: 0.4rem;
   background-color: #ced7e0;
   border-radius: 50%;
   margin: 0.5rem;
@@ -96,7 +232,7 @@ body {
 
 .selected {
   transform: scale(1.025);
-  box-shadow: 0 26px 42px 3rem rgba(31, 56, 110, 0.18); }
+  box-shadow: 0 2.6rem 4.2rem 3rem rgba(31, 56, 110, 0.18); }
 
 .header {
   width: auto;
@@ -108,12 +244,21 @@ body {
   grid-row: 1 /2;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr; }
+  @media (max-width: 56.25em) {
+    .header {
+      padding: 2rem 2rem; } }
   .header .navbar {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     box-shadow: 0 1px 0 0 rgba(255, 255, 255, 0.1); }
+    .header .navbar__list {
+      display: block;
+      /*Activete and Deactivate navbar*/ }
+      @media (max-width: 37.5em) {
+        .header .navbar__list {
+          display: none; } }
     .header .navbar__logo {
       margin: -3rem;
       padding: 0 3rem;
@@ -152,11 +297,11 @@ body {
       border-radius: 50%;
       font-size: 1.6rem; }
   .header .total {
-    width: 102px;
-    height: 24px;
+    width: 10rem;
+    height: 2.4rem;
     opacity: 0.5;
     font-family: Lato, sans-serif;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
@@ -187,9 +332,9 @@ body {
       align-items: center;
       justify-content: space-between; }
     .header .flight__details {
-      height: 30px;
+      height: 3rem;
       width: auto;
-      font-size: 14px;
+      font-size: 1.4rem;
       font-weight: 600;
       font-style: normal;
       font-stretch: normal;
@@ -202,6 +347,12 @@ body {
   padding: 0 10rem;
   background-color: #ffffff;
   grid-column: 1 / -1; }
+  @media (max-width: 75em) {
+    .search-bar {
+      padding: 0 6rem; } }
+  @media (max-width: 56.25em) {
+    .search-bar {
+      padding: 0 2rem; } }
   .search-bar__list {
     padding: 2rem 0;
     display: flex;
@@ -219,8 +370,8 @@ body {
     color: #1a3163;
     opacity: 0.5;
     width: auto;
-    height: 20px;
-    font-size: 14px;
+    height: 2rem;
+    font-size: 1.4rem;
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
@@ -231,6 +382,7 @@ body {
       background-color: #97a6b8;
       color: #ffffff; }
 
+/*///////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*Departure and Attival section*/
 .departure {
   padding: 0 0 0 10rem;
@@ -252,6 +404,15 @@ body {
   /*Departure Title*/
   /*Departure Date bar*/
   /*Departure Card*/ }
+  @media (max-width: 75em) {
+    .departure {
+      padding: 0 0 0 6rem; } }
+  @media (max-width: 56.25em) {
+    .departure {
+      padding: 0 0 0 2rem;
+      display: grid;
+      grid-column: 1 / -1;
+      grid-row: auto; } }
   .departure__title {
     justify-self: start;
     align-self: center;
@@ -318,7 +479,7 @@ body {
   .departure__card {
     height: 100%;
     border-radius: 1rem;
-    box-shadow: 0 16px 32px 0 rgba(31, 56, 110, 0.18);
+    box-shadow: 0 1.6rem 3.2rem 0 rgba(31, 56, 110, 0.18);
     /*.
         card-scroll {
             position: absolute;
@@ -386,6 +547,7 @@ body {
           font-weight: 600;
           color: #1a3163; }
 
+/*//////////////////////////////////////////////////////////////////////////////////////////////////////*/
 .arrival {
   padding: 0  10rem 0 0;
   grid-row: 3/4;
@@ -398,6 +560,15 @@ body {
   /*Arrival Title*/
   /*Arrival date bar*/
   /*Departure Card*/ }
+  @media (max-width: 75em) {
+    .arrival {
+      padding: 0 6rem 0 0; } }
+  @media (max-width: 56.25em) {
+    .arrival {
+      padding: 0 2rem 0 0;
+      display: grid;
+      grid-column: 1 / -1;
+      grid-row: auto; } }
   .arrival__title {
     padding-left: 1rem;
     justify-self: start;
@@ -469,7 +640,7 @@ body {
   .arrival__card {
     height: 100%;
     border-radius: 1rem;
-    box-shadow: 0 16px 32px 0 rgba(31, 56, 110, 0.18);
+    box-shadow: 0 1.6rem 3.2rem 0 rgba(31, 56, 110, 0.18);
     /*.
         card-scroll {
             position: absolute;
@@ -538,8 +709,6 @@ body {
           color: #1a3163; }
 
 .footer {
-  background-color: grey;
-  height: 300px;
   grid-column: 1 / -1;
   padding: 4rem 10rem 4rem 10rem;
   background-color: #ffffff;
@@ -551,7 +720,7 @@ body {
   .footer-logo__text {
     opacity: 0.5;
     font-family: Lato, sans-serif;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
@@ -560,7 +729,7 @@ body {
     color: #1a3163; }
   .footer-pro__title {
     font-family: Lato, sans-serif;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
@@ -575,7 +744,7 @@ body {
       text-decoration: none;
       opacity: 0.5;
       font-family: Lato, sans-serif;
-      font-size: 14px;
+      font-size: 1.4rem;
       font-weight: normal;
       font-style: normal;
       font-stretch: normal;
@@ -584,7 +753,7 @@ body {
       color: #1a3163; }
   .footer-about__title {
     font-family: Lato, sans-serif;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
@@ -599,7 +768,7 @@ body {
       text-decoration: none;
       opacity: 0.5;
       font-family: Lato, sans-serif;
-      font-size: 14px;
+      font-size: 1.4rem;
       font-weight: normal;
       font-style: normal;
       font-stretch: normal;
@@ -608,7 +777,7 @@ body {
       color: #1a3163; }
   .footer-support__title {
     font-family: Lato, sans-serif;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
@@ -623,7 +792,7 @@ body {
       text-decoration: none;
       opacity: 0.5;
       font-family: Lato, sans-serif;
-      font-size: 14px;
+      font-size: 1.4rem;
       font-weight: normal;
       font-style: normal;
       font-stretch: normal;
