--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,8 +9,21 @@
     display: grid;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 
-    .navbar {
+    @include respond(tab-port){
+        padding: 2rem 2rem;
+    }
 
+    
+
+    .navbar {
+        
+        &__list {
+            display: block;  /*Activete and Deactivate navbar*/
+            
+            @include respond (phone){
+                display: none;
+            }
+        }
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -72,11 +85,11 @@
     }
 
     .total {
-        width: 102px;
-        height: 24px;
+        width: 10rem;
+        height: 2.4rem;
         opacity: 0.5;
         font-family: $font-primary;
-        font-size: 16px;
+        font-size: 1.6rem;
         font-weight: 600;
         font-style: normal;
         font-stretch: normal;
@@ -96,6 +109,7 @@
         align-items: center;
         justify-content: space-between;
 
+     
       
         .plane {
             font-size: 2rem;
@@ -120,9 +134,9 @@
            }
         
         &__details {
-            height: 30px;
+            height: 3rem;
             width: auto;
-            font-size: 14px;
+            font-size: 1.4rem;
             font-weight: 600;
             font-style: normal;
             font-stretch: normal;
@@ -144,6 +158,14 @@
         padding: 0 10rem;
         background-color: $white;
         grid-column: 1 / -1;
+
+        @include respond(tab-land){
+            padding: 0 6rem;
+        }
+
+        @include respond(tab-port){
+            padding: 0 2rem;
+        }
            
         
         
@@ -173,8 +195,8 @@
             color: $dark-slate-blue;
             opacity: 0.5;
             width: auto;
-            height: 20px;
-            font-size: 14px;
+            height: 2rem;
+            font-size: 1.4rem;
             font-weight: 600;
             font-style: normal;
             font-stretch: normal;
@@ -194,7 +216,7 @@
 
 }
 
-
+/*///////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*Departure and Attival section*/
 
 .departure {
@@ -206,6 +228,16 @@
     grid-template-rows: 1fr 1fr max-content;
     grid-gap: 1rem 1rem;
     margin: 0 1rem 8rem 1rem;
+
+    @include respond (tab-land){
+        padding : 0 0 0 6rem;
+    }
+    @include respond(tab-port){
+        padding: 0 0 0 2rem;
+        display:grid;
+        grid-column: 1 / -1;
+        grid-row: auto;
+      }
   /*
     
     @media only screen  and (max-width: 992px){
@@ -313,7 +345,7 @@
     &__card {
         height: 100%;
         border-radius: 1rem;
-        box-shadow: 0 16px 32px 0 rgba(31, 56, 110, 0.18);
+        box-shadow: 0 1.6rem 3.2rem 0 rgba(31, 56, 110, 0.18);
 
         &-top {
             display: flex;
@@ -402,7 +434,7 @@
     }
 
 }
-
+/*//////////////////////////////////////////////////////////////////////////////////////////////////////*/
 .arrival {
     padding: 0  10rem 0 0;
     grid-row: 3/4;
@@ -412,6 +444,16 @@
     grid-template-rows: 1fr 1fr auto;
     grid-gap: 1rem 1rem;
     margin: 0 1rem 8rem 1rem;
+
+    @include respond (tab-land){
+        padding : 0 6rem 0 0;
+    }
+    @include respond(tab-port){
+        padding: 0 2rem 0 0;
+        display:grid;
+        grid-column: 1 / -1;
+        grid-row: auto;
+      }
 
 
        /*Arrival Title*/
@@ -518,7 +560,7 @@
     &__card {
         height: 100%;
         border-radius: 1rem;
-        box-shadow: 0 16px 32px 0 rgba(31, 56, 110, 0.18);
+        box-shadow: 0 1.6rem 3.2rem 0 rgba(31, 56, 110, 0.18);
 
         &-top {
             display: flex;
@@ -607,8 +649,6 @@
 }
 
 .footer {
-    background-color: grey;
-    height: 300px;
     grid-column: 1 / -1;
     padding: 4rem 10rem 4rem 10rem;
     background-color: $white;
@@ -626,7 +666,7 @@
         &__text {
             opacity: 0.5;
             font-family: $font-primary;
-            font-size: 14px;
+            font-size: 1.4rem;
             font-weight: normal;
             font-style: normal;
             font-stretch: normal;
