--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -175,7 +175,7 @@ html {
       font-size: 50%; } }
   @media (max-width: 37.5em) {
     html {
-      font-size: 45%; } }
+      font-size: 37.5%; } }
 
 body {
   font-family: Lato, sans-serif;
@@ -199,6 +199,9 @@ body {
   font-size: 1.4rem;
   font-weight: 600;
   vertical-align: middle; }
+  @media (max-width: 37.5em) {
+    .btn {
+      font-size: 1.6rem; } }
   .btn-white {
     background-color: #d8e1eb;
     color: #1a3163; }
@@ -309,6 +312,9 @@ body {
       margin: -3rem;
       padding: 0 3rem;
       height: auto; }
+      @media (max-width: 37.5em) {
+        .header .navbar__logo {
+          margin: 4.5rem 0; } }
     .header .navbar__list-item {
       line-height: 1.43;
       font-weight: 600;
@@ -490,8 +496,13 @@ body {
     backface-visibility: hidden; }
     @media (max-width: 37.5em) {
       .search-bar__list {
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap; } }
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; } }
     .search-bar__list > * {
       cursor: pointer; }
     .search-bar__list > *:hover {
@@ -515,6 +526,10 @@ body {
     line-height: 1.43;
     letter-spacing: normal;
     padding-right: 0 2rem; }
+    @media (max-width: 37.5em) {
+      .search-bar__list-items {
+        padding: 2rem 4rem;
+        font-size: 2rem; } }
     .search-bar__list-items:last-child a {
       background-color: #97a6b8;
       color: #ffffff; }
@@ -925,6 +940,28 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto; }
+  @media (max-width: 37.5em) {
+    .footer {
+      grid-template-rows: 1fr 1fr;
+      justify-items: center; } }
+  @media (max-width: 37.5em) {
+    .footer-logo {
+      grid-column: 1 / -1;
+      justify-self: center;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      -webkit-box-align: center;
+      -ms-flex-align: center;
+      align-items: center;
+      padding: 0 0 1rem 0; } }
   .footer-logo__img {
     padding: 0 0 2rem 0; }
   .footer-logo__text {
@@ -937,6 +974,14 @@ body {
     line-height: 1.43;
     letter-spacing: normal;
     color: #1a3163; }
+    @media (max-width: 37.5em) {
+      .footer-logo__text {
+        font-size: 2rem; } }
+  @media (max-width: 37.5em) {
+    .footer-pro {
+      grid-column: 1 / -1;
+      grid-row: 2/3;
+      justify-self: start; } }
   .footer-pro__title {
     font-family: Lato, sans-serif;
     font-size: 1.6rem;
@@ -947,6 +992,9 @@ body {
     letter-spacing: normal;
     color: #1a3163;
     padding: 0 0 2rem 0; }
+    @media (max-width: 37.5em) {
+      .footer-pro__title {
+        font-size: 1.8rem; } }
   .footer-pro__list__item {
     list-style: none;
     padding: 1rem 0; }
@@ -961,6 +1009,14 @@ body {
       line-height: 1.43;
       letter-spacing: normal;
       color: #1a3163; }
+      @media (max-width: 37.5em) {
+        .footer-pro__list__item a {
+          font-size: 1.6rem; } }
+  @media (max-width: 37.5em) {
+    .footer-about {
+      grid-column: 1 / -1;
+      grid-row: 2/3;
+      justify-self: center; } }
   .footer-about__title {
     font-family: Lato, sans-serif;
     font-size: 1.6rem;
@@ -971,6 +1027,9 @@ body {
     letter-spacing: normal;
     color: #1a3163;
     padding: 0 0 2rem 0; }
+    @media (max-width: 37.5em) {
+      .footer-about__title {
+        font-size: 1.8rem; } }
   .footer-about__list__item {
     list-style: none;
     padding: 1rem 0; }
@@ -985,6 +1044,14 @@ body {
       line-height: 1.43;
       letter-spacing: normal;
       color: #1a3163; }
+      @media (max-width: 37.5em) {
+        .footer-about__list__item a {
+          font-size: 1.6rem; } }
+  @media (max-width: 37.5em) {
+    .footer-support {
+      grid-column: 1 / -1;
+      grid-row: 2/3;
+      justify-self: end; } }
   .footer-support__title {
     font-family: Lato, sans-serif;
     font-size: 1.6rem;
@@ -995,6 +1062,9 @@ body {
     letter-spacing: normal;
     color: #1a3163;
     padding: 0 0 2rem 0; }
+    @media (max-width: 37.5em) {
+      .footer-support__title {
+        font-size: 1.8rem; } }
   .footer-support__list__item {
     list-style: none;
     padding: 1rem 0; }
@@ -1009,3 +1079,6 @@ body {
       line-height: 1.43;
       letter-spacing: normal;
       color: #1a3163; }
+      @media (max-width: 37.5em) {
+        .footer-support__list__item a {
+          font-size: 1.6rem; } }
