--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,8 @@ Variables
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  outline: none; }
 
 html {
   box-sizing: border-box;
@@ -296,9 +297,9 @@ body {
       background-color: #ffffff;
       border: 1px solid #ffffff;
       border-radius: 50%;
-      padding: 0.85rem;
+      padding: 1rem;
       font-size: 1.6rem;
-      margin-left: -1.2rem; }
+      margin-left: -1.93rem; }
     .header .ticket__steps span {
       padding: 0 0 0 1rem;
       font-size: 2.5rem;
