--- a/css/prefix/main.css
+++ b/css/prefix/main.css
@@ -158,7 +158,8 @@ Variables
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  outline: none; }
 
 html {
   -webkit-box-sizing: border-box;
@@ -342,9 +343,9 @@ body {
       background-color: #ffffff;
       border: 1px solid #ffffff;
       border-radius: 50%;
-      padding: 0.85rem;
+      padding: 1rem;
       font-size: 1.6rem;
-      margin-left: -1.2rem; }
+      margin-left: -1.93rem; }
     .header .ticket__steps span {
       padding: 0 0 0 1rem;
       font-size: 2.5rem;
