--- a/css/main.css
+++ b/css/main.css
@@ -74,13 +74,13 @@ Variables
     list-style: none;
     text-align: center; }
   .navigation__item {
-    margin: 1rem; }
+    margin: 5rem; }
   .navigation__link:link, .navigation__link:visited {
     display: inline-block;
     font-size: 3rem;
     font-weight: 300;
     color: #fff;
-    padding: 1rem 2rem;
+    padding: 1.5rem 2rem;
     text-decoration: none;
     text-transform: uppercase;
     background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
@@ -153,7 +153,7 @@ html {
       font-size: 37.5%; } }
 
 body {
-  font-family: Lato, sans-serif;
+  font-family: "Lato", sans-serif;
   width: auto;
   height: auto;
   background-color: #f7f8fc; }
@@ -165,7 +165,6 @@ body {
 
 .btn {
   width: 15.4rem;
-  height: 4rem;
   padding: 1rem 2rem;
   border-radius: 10rem;
   text-decoration: none;
@@ -175,7 +174,8 @@ body {
   vertical-align: middle; }
   @media (max-width: 37.5em) {
     .btn {
-      font-size: 1.6rem; } }
+      font-size: 2rem;
+      padding: 1.5rem 2rem; } }
   .btn-white {
     background-color: #d8e1eb;
     color: #1a3163; }
@@ -297,24 +297,31 @@ body {
       background-color: #ffffff;
       border: 1px solid #ffffff;
       border-radius: 50%;
-      padding: 0.78rem;
-      font-size: 1.6rem;
+      padding: 0.7rem;
+      font-size: 1.8rem;
       margin-left: -1.93rem; }
     .header .ticket__steps span {
       padding: 0 0 0 1rem;
       font-size: 2.5rem;
       color: #d8e1eb;
-      opacity: 0.4; }
+      opacity: 0.4;
+      vertical-align: middle; }
+      @media (max-width: 56.25em) {
+        .header .ticket__steps span {
+          padding: 2rem 2rem; } }
     .header .ticket__steps .icon {
       padding: 1rem 1rem;
       border: 1px solid #d8e1eb;
       border-radius: 50%;
       font-size: 1.6rem; }
+      @media (max-width: 37.5em) {
+        .header .ticket__steps .icon {
+          font-size: 3rem; } }
   .header .total {
     width: 10rem;
     height: 2.4rem;
     opacity: 0.5;
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
@@ -331,7 +338,7 @@ body {
     display: none;
     width: 10rem;
     opacity: 0.5;
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
@@ -425,21 +432,26 @@ body {
     color: #1a3163;
     opacity: 0.5;
     width: auto;
-    height: 2rem;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     font-weight: 600;
-    font-style: normal;
     font-stretch: normal;
     line-height: 1.43;
-    letter-spacing: normal;
-    padding-right: 0 2rem; }
+    padding-right: 0 2rem;
+    font-family: "Lato", sans-serif; }
+    .search-bar__list-items .fa-search {
+      padding-left: 10px;
+      vertical-align: center; }
     @media (max-width: 37.5em) {
       .search-bar__list-items {
-        padding: 2rem 4rem;
+        padding: 1rem 0 2rem 0;
         font-size: 2rem; } }
     .search-bar__list-items:last-child a {
       background-color: #97a6b8;
       color: #ffffff; }
+      @media (max-width: 37.5em) {
+        .search-bar__list-items:last-child a {
+          padding: 1.5rem 1.5rem;
+          font-size: 2rem; } }
 
 /*///////////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*Departure and Attival section*/
@@ -791,7 +803,7 @@ body {
     padding: 0 0 2rem 0; }
   .footer-logo__text {
     opacity: 0.5;
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 1.4rem;
     font-weight: normal;
     font-style: normal;
@@ -808,7 +820,7 @@ body {
       grid-row: 2/3;
       justify-self: start; } }
   .footer-pro__title {
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
@@ -819,14 +831,14 @@ body {
     padding: 0 0 2rem 0; }
     @media (max-width: 37.5em) {
       .footer-pro__title {
-        font-size: 1.8rem; } }
+        font-size: 2rem; } }
   .footer-pro__list__item {
     list-style: none;
     padding: 1rem 0; }
     .footer-pro__list__item a {
       text-decoration: none;
       opacity: 0.5;
-      font-family: Lato, sans-serif;
+      font-family: "Lato", sans-serif;
       font-size: 1.4rem;
       font-weight: normal;
       font-style: normal;
@@ -836,14 +848,14 @@ body {
       color: #1a3163; }
       @media (max-width: 37.5em) {
         .footer-pro__list__item a {
-          font-size: 1.6rem; } }
+          font-size: 1.8rem; } }
   @media (max-width: 37.5em) {
     .footer-about {
       grid-column: 1 / -1;
       grid-row: 2/3;
       justify-self: center; } }
   .footer-about__title {
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
@@ -854,14 +866,14 @@ body {
     padding: 0 0 2rem 0; }
     @media (max-width: 37.5em) {
       .footer-about__title {
-        font-size: 1.8rem; } }
+        font-size: 2rem; } }
   .footer-about__list__item {
     list-style: none;
     padding: 1rem 0; }
     .footer-about__list__item a {
       text-decoration: none;
       opacity: 0.5;
-      font-family: Lato, sans-serif;
+      font-family: "Lato", sans-serif;
       font-size: 1.4rem;
       font-weight: normal;
       font-style: normal;
@@ -871,14 +883,14 @@ body {
       color: #1a3163; }
       @media (max-width: 37.5em) {
         .footer-about__list__item a {
-          font-size: 1.6rem; } }
+          font-size: 1.8rem; } }
   @media (max-width: 37.5em) {
     .footer-support {
       grid-column: 1 / -1;
       grid-row: 2/3;
       justify-self: end; } }
   .footer-support__title {
-    font-family: Lato, sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 1.6rem;
     font-weight: 600;
     font-style: normal;
@@ -889,14 +901,14 @@ body {
     padding: 0 0 2rem 0; }
     @media (max-width: 37.5em) {
       .footer-support__title {
-        font-size: 1.8rem; } }
+        font-size: 2rem; } }
   .footer-support__list__item {
     list-style: none;
     padding: 1rem 0; }
     .footer-support__list__item a {
       text-decoration: none;
       opacity: 0.5;
-      font-family: Lato, sans-serif;
+      font-family: "Lato", sans-serif;
       font-size: 1.4rem;
       font-weight: normal;
       font-style: normal;
@@ -906,4 +918,4 @@ body {
       color: #1a3163; }
       @media (max-width: 37.5em) {
         .footer-support__list__item a {
-          font-size: 1.6rem; } }
+          font-size: 1.8rem; } }
