--- a/sass/_component.scss
+++ b/sass/_component.scss
@@ -1,6 +1,5 @@
 .btn {
     width: 15.4rem;
-    height: 4rem;
     padding: 1rem 2rem;
     border-radius: 10rem;
     text-decoration: none;
@@ -10,7 +9,8 @@
     vertical-align: middle;
 
     @include respond(phone){
-        font-size: 1.6rem;
+        font-size: 2rem;
+        padding: 1.5rem 2rem;
     }
 
     
@@ -93,9 +93,6 @@
     transform: scale(1.025);
     box-shadow: 0 2.6rem 4.2rem 3rem rgba(31, 56, 110, 0.18);
 }
-
-
-
 
 
 
