--- a/sass/main.scss
+++ b/sass/main.scss
@@ -58,7 +58,7 @@ Mixins
 
     @include respond(phone){
                 
-        font-size: 1.6rem;
+        font-size: 1.8rem;
 
     }
 }
@@ -75,7 +75,7 @@ Mixins
     padding: 0 0 2rem 0;
     @include respond(phone){
                 
-        font-size: 1.8rem;
+        font-size: 2rem;
     }
 }
 
@@ -101,7 +101,7 @@ $light-blue-grey: #d8e1eb;
 $light-royal-blue: #3b44ff;
 $reddish-pink: #ff2b5d;
 
-$font-primary : Lato, sans-serif;
+$font-primary : 'Lato', sans-serif;
 
 @import 'navigation';
 @import 'base';
